--- a/src/main/resources/view/home_form.fxml
+++ b/src/main/resources/view/home_form.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,26 +10,29 @@
 
 <AnchorPane prefHeight="480.0" prefWidth="400.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.chatApplication.controller.HomeFormController">
    <children>
-      <ImageView fitHeight="400.0" fitWidth="300.0" layoutX="58.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="400.0" fitWidth="300.0" layoutX="59.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true" style="-fx-background-radius: 20; -fx-border-radius: 20; -fx-border-color: black;">
          <image>
             <Image url="@../assests/marvin-meyer-SYTO3xs06fU-unsplash%201.png" />
          </image>
+         <effect>
+            <DropShadow />
+         </effect>
       </ImageView>
-      <TextField fx:id="txtjon" layoutX="67.0" layoutY="144.0" onAction="#txtjonOnActon" prefHeight="34.0" prefWidth="283.0" style="-fx-background-radius: 0; -fx-border-width: 1 1 1 1; -fx-border-color: white; -fx-background-color: kk; -fx-border-radius: 8; -fx-text-fill: white;">
-         <font>
-            <Font size="16.0" />
-         </font></TextField>
-      <Label layoutX="65.0" layoutY="118.0" text="Enter your name :" textFill="WHITE" AnchorPane.topAnchor="118.0">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="27.0" layoutY="253.0" text="Group Chat Application" textFill="WHITE" />
-      <Label layoutX="134.0" layoutY="3.0" text="create your chat" textFill="WHITE">
+      <Label layoutX="141.0" layoutY="49.0" text="create your chat" textFill="WHITE">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Label layoutX="297.0" layoutY="253.0" text="version 1.0.0" textFill="WHITE" />
+      <TextField fx:id="txtjon" layoutX="67.0" layoutY="187.0" onAction="#txtjonOnActon" prefHeight="34.0" prefWidth="283.0" style="-fx-background-radius: 0; -fx-border-width: 1 1 1 1; -fx-border-color: white; -fx-background-color: kk; -fx-border-radius: 8; -fx-text-fill: white;">
+         <font>
+            <Font size="16.0" />
+         </font></TextField>
+      <Label layoutX="65.0" layoutY="161.0" text="Enter your name :" textFill="WHITE" AnchorPane.topAnchor="161.0">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="57.0" layoutY="296.0" text="Group Chat Application" textFill="WHITE" />
+      <Label layoutX="287.0" layoutY="296.0" text="version 1.0.0" textFill="WHITE" />
    </children>
 </AnchorPane>
